[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.4.1", features = ["v4", "wasm-bindgen", "serde"] }
serde = { version = "^1", features = ["derive"] }
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }
getrandom = { version = "^0.2.5", features = ["js"] }
derive_more = "^0.99"
chrono = { version = "^0", features = ["serde"] }
serde_json = { version = "1.0.110", features = ["raw_value"] }