[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.8.0", features = ["v4", "js", "serde"] }
serde = { version = "^1", features = ["derive"] }
strum_macros = "0.26.2"
strum = { version = "0.26.2", features = ["derive"] }
getrandom = { version = "^0.2.5", features = ["js"] }
derive_more = "^0.99"
chrono = { version = "^0", features = ["serde"] }
serde_json = { version = "1.0.111", features = ["raw_value"] }
schemars = "0.8.21"