[package]
name = "bainger_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
gloo = "0.11.0"
gloo-utils = "0.2.0"
reqwasm = "0.5.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["raw_value"] }
validator = { version = "0.18.1", features = ["derive"] }
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = ["HtmlInputElement", "HtmlSelectElement", "Window"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yewdux = "0.10.0"
futures = "0.3.31"
rand = "0.8.5"
uuid = { version = "1.11.0", features = ["v4"] }
common = { path = "../common" }