[package]
name = "bainger_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
gloo = "0.11.0"
gloo-utils = "0.2.0"
reqwasm = "0.5.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["raw_value"] }
validator = { version = "0.18.1", features = ["derive"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.77", features = ["HtmlInputElement", "HtmlSelectElement", "Window"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yewdux = "0.10.0"
futures = "0.3.31"
rand = "0.8.5"
uuid = { version = "1.12.1", features = ["v4"] }
common = { path = "../common" }